crates/vexor-compiler/tests/golden/error/input/if_missing_braces.vx
val r = 100
val c = Circle(r)
-- missing braces around branches
val result = if r > 50 c else c
export result
